# news-api

./: Cargo.toml  Dockerfile  README.md  deployment.yaml
src/: endpoints.rs  main.rs
