[package]
name = "news-api"
version = "1.0.0"
authors = ["Ricky Yang"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
hyper = "0.13" # 是一个web框架，也实现了HTTP client的功能
tokio = { version = "0.2", features = ["full"] } ##和HTTP库配套的
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
log = "0.4.8"
